# fast-api-boilerplaite

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  tutorial.md
alembic/: env.py
alembic/versions/: 6e46d6b40dbc_quotes.py
app/: logging_conf.json  main.py
app/api/dependencies/: __init__.py
app/api/v1/: __init__.py  data.py  quotes.py
app/core/: constant.py  events.py
app/database/: enums.py  events.py
app/database/repositories/: __init__.py  base.py  rate.py  route.py
app/models/: __init__.py  author.py  base.py  book.py  common.py  rate.py  route.py
app/schemas/: data.py  message.py  quote.py
app/services/: quotes.py  rates.py
app/utils/: __init__.py  calculate_quotes.py
tests/: conftest.py
tests/api/v1/: test_data.py  test_quotes.py
